# tola-caps

./: Cargo.toml  LICENSE  README.md
examples/: compile_dispatch.rs  complete_specialization.rs  generic_container_check.rs  generic_test.rs.disabled  perfect_specialization.rs  pure_compile_time.rs  registry_spec.rs  type_level_dispatch.rs  ultimate_spec.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/src/common/: bool_expr.rs  mod.rs  parse_utils.rs  trait_model.rs
macros/src/inner/: byte_eq.rs  byte_stream.rs  mod.rs  name_stream.rs  node16.rs  peano.rs  std_traits.rs  std_types.rs
macros/src/user/: auto_caps.rs  cap_set.rs  capability.rs  caps_bound.rs  mod.rs  specialize.rs  specialize_common.rs
src/: capability.rs  lib.rs  syntax_macros.rs
src/detect/: autocaps.rs  autoref.rs  markers.rs  mod.rs
src/primitives/: bool.rs  bridge.rs  byte_cmp.rs  const_utils.rs  finger.rs  identity.rs  mod.rs  nibble.rs  pack.rs  stream.rs
src/spec/: compile.rs  dispatch.rs  mod.rs  runtime.rs
src/trie/: aliases.rs  capability.rs  evaluate.rs  insert.rs  inspect.rs  mod.rs  node.rs  ops.rs
tests/: autocaps_generic_test.rs  caps_bound.rs  caps_bound_targets.rs  caps_check_comprehensive.rs  caps_check_limitations.rs  caps_check_test.rs  compile_fail.rs  compile_fail_demonstration.rs  complex_trait_macro.rs  custom_trait_test.rs  full_specialization_test.rs  macro_collision.rs  minimal_test.rs  name_collision.rs  reflection_test.rs  repro_collision.rs  repro_derive_complex.rs  rfc1210_compliance_test.rs  specialization_block_test.rs  specialization_comprehensive_test.rs  specialize_test.rs  specialize_unified.rs  std_types_check.rs  target_test.rs  ultra_minimal.rs
