[package]
name = "tola-caps"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Capability system using 16-ary type-level trie with hash-stream routing"
keywords = ["capability", "type-level", "compile-time", "zero-cost", "trie"]
categories = ["rust-patterns", "no-std"]
repository = "https://github.com/tola-rs/tola-caps"
readme = "README.md"

[features]
default = []

[dependencies]
tola-caps-macros = { path = "macros", version = "0.1.0" }

# No other dependencies - pure type-level computation
